Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ jobs:
       vmImage: ubuntu-latest
     displayName: Run JMeter tests
     steps:
-      - task: Bash@3
+      - task: PowerShell@2
         displayName: Execute JMeter tests
         inputs:
           targetType: filePath
